Added ContentProvider, Contract and DBHelper for Favorites. Can query and insert, however having issue with inserting movie_id

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,14 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                         android:value="com.ventoray.popularmovies.MainActivity"
                 />
-
         </activity>
+
+        <provider
+            android:authorities="com.ventoray.popularmovies"
+            android:name=".data_favorites.FavoritesContentProvider"
+            android:exported="false"
+            />
+
     </application>
 
 </manifest>
